--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     });
   </script>
 
-  <!-- 중복검사 · 이미지 로테이션 · 초기 로드 · 무한 스크롤 (원본 index.html) -->
+  <!-- 중복검사 · 이미지 로테이션 · 초기 로드 · 무한 스크롤 (점수+날짜 기준 정렬) -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const API_BASE  = 'https://news-assistant-app-public-1052035590147.us-central1.run.app';
@@ -140,12 +140,16 @@
             return;
           }
 
-          // 3) score 필드 병합 & 4) 내림차순 정렬
+          // 3) score 병합 & 4) score 내림차순, 동점이면 date 내림차순
           issues = issues
             .map(issue => ({ ...issue, score: scoreMap[issue.id] || 0 }))
-            .sort((a, b) => b.score - a.score);
+            .sort((a, b) => {
+              const diff = b.score - a.score;
+              if (diff !== 0) return diff;
+              return new Date(b.date) - new Date(a.date);
+            });
 
-          // 5) 렌더링 (기존 로직 그대로)
+          // 5) 렌더링
           issues.forEach(issue => {
             if (postsList.querySelector(`li[data-issue-id="${issue.id}"]`)) return;
 
