--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
 
   <!-- 로그인 상태에 따라 메뉴 업데이트 (수정판) -->
   <script>
-    document.addEventListener('DOMContentLoaded', async() => {
+    document.addEventListener('DOMContentLoaded', async () => {
       const API_BASE  = 'https://news-assistant-app-public-1052035590147.us-central1.run.app';
       const links     = document.getElementById('menuLinks');
-      const postsList = document.getElementById('postsList');
 
       try {
         const profileRes = await fetch(`${API_BASE}/profile`, { credentials: 'include' });
@@ -98,7 +97,7 @@
 
   <!-- 중복검사 · 이미지 로테이션 · 초기 로드 · 무한 스크롤 (로그인별 분기) -->
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener('DOMContentLoaded', async () => {
       const API_BASE  = 'https://news-assistant-app-public-1052035590147.us-central1.run.app';
       const postsList = document.getElementById('postsList');
 
@@ -106,17 +105,15 @@
       let offset = 0;
       let loading = false;
       let finished = false;
-      let isLoggedIn = false;
 
-      // 로그인 여부 확인
-      (async () => {
-        try {
-          const res = await fetch(`${API_BASE}/profile`, { credentials: 'include' });
-          isLoggedIn = res.ok;
-        } catch {
-          isLoggedIn = false;
-        }
-      })();
+      // 로그인 여부 먼저 확인
+      let isLoggedIn = false;
+      try {
+        const res = await fetch(`${API_BASE}/profile`, { credentials: 'include' });
+        isLoggedIn = res.ok;
+      } catch {
+        isLoggedIn = false;
+      }
 
       async function loadIssues() {
         if (loading || finished) return;
